--- a/index.html
+++ b/index.html
@@ -6,24 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css
+    ">
 </head>
 
 <body>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum beatae culpa laboriosam, dolore ipsa modi officia
-        delectus impedit quibusdam quae nesciunt, a voluptatum animi debitis eos et sapiente odit dolorem! Lorem ipsum
-        dolor sit amet consectetur adipisicing elit. Totam voluptatem atque, perferendis voluptates aperiam a veritatis
-        quia harum ab numquam voluptas illum ullam vel tempore molestiae eius libero deleniti perspiciatis!</p>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum beatae culpa laboriosam, dolore ipsa modi officia
-        delectus impedit quibusdam quae nesciunt, a voluptatum animi debitis eos et sapiente odit dolorem! Lorem ipsum
-        dolor sit amet consectetur adipisicing elit. Totam voluptatem atque, perferendis voluptates aperiam a veritatis
-        quia harum ab numquam voluptas illum ullam vel tempore molestiae eius libero deleniti perspiciatis!</p>
-    <div></div>
-    <div></div>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum beatae culpa laboriosam, dolore ipsa modi officia
-        delectus impedit quibusdam quae nesciunt, a voluptatum animi debitis eos et sapiente odit dolorem! Lorem ipsum
-        dolor sit amet consectetur adipisicing elit. Totam voluptatem atque, perferendis voluptates aperiam a veritatis
-        quia harum ab numquam voluptas illum ullam vel tempore molestiae eius libero deleniti perspiciatis!</p>
+    <div class="container-fluid">
+        <table class="table ">
+            <thead>
+                <tr>
+                    <th scope="col">Practica</th>
+                    <th scope="col">Links</th>
+                    <th scope="col">Dia</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">2</th>
+                    <td><a href="practica2.html">Dar clic</a></td>
+                    <td>08/06/2022</td>
+
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td><a href="#">Dar clic</a></td>
+                    <td>09/06/22</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 
 </html>
