--- a/practica2.html
+++ b/practica2.html
@@ -11,9 +11,9 @@
 
 <body>
     <p class="center ">Everything is personal.... including this blog</p>
-    <p class="center moradobonis">Train of Thought</p>
+    <p class="center moradobonis"><ins>Train of Thought</ins></p>
     <div>
-        <table border="3px" class="tablita">
+        <table border="1px " class="tablita">
             <tr>
                 <td></td>
                 <td>Home</td>
@@ -23,7 +23,7 @@
             </tr>
         </table>
     </div>
-    <div>
+    <div >
         <img src="prin.jpg" alt="imagen ">
     </div>
     
