--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </tr>
                 <tr>
                     <th scope="row">3</th>
-                    <td><a href="#">Dar clic</a></td>
+                    <td><a href="practica3.html">Dar clic</a></td>
                     <td>09/06/22</td>
                 </tr>
             </tbody>
