promesa asincrona tranquis

--- a/Practicas/asyncFunctions.html
+++ b/Practicas/asyncFunctions.html
@@ -86,9 +86,8 @@
     crossorigin="anonymous"></script>
 
     <!-- Una funcion asincrona se define con una función async y la cual devuelve un objeto AsyncFunction 
- Async / await simplifican el comportamuentio de uso sincrono de promesas. Las promiss
+ Async / await simplifican el comportamuentio de uso sincrono de promesas. Las promiss-->
 
-
--->
-
+ <!-- [] para arreglos 
+ {} para objetos -->
 </html>
