--- a/Practicas/tarea2.html
+++ b/Practicas/tarea2.html
@@ -1,80 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"
-    />
-  </head>
 
-  <body>
-    <div class="container-fluid p-5">
-      <div class="row">
-        <div class="col-4">
-          <div class="card" style="width: 400px; height: 300px">
-            <div class="card-body">ñaaaaaa</div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Imagenes</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
+</head>
+
+<body>
+  <div class="container-fluid p-5">
+    <div class="row">
+      <div class="col-4"></div>
+      <div class="col-4">
+        <div class="card">
+          <div id="imagen" class="col">
           </div>
-        </div>
-        <div class="col-4">
-          <div class="card" style="width: 400px; height: 300px">
-            <div class="card-body">ñaaaaaa</div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="card" style="width: 400px; height: 300px">
-            <div class="card-body">ñaaaaaa</div>
+          <div class="card-body">
+            <h5 class="card-title"></h5>MINIONS</h5>
+            <p class="card-text">TURIPELLA CON LA PAPAYA</p>
+            <div class="row">
+              <div class="container ">
+                <!-- Botones -->
+                <div class="row  ">
+                  <div class="ml-lg-0 col-lg-12">
+                    <div class="form-group row d-flex justify-content-between ">
+                      <input type="button" name="previous"      class="previous btn btn-default col-5 col-md-5 btn-outline-info" value="Previo">
+                      <input type="button" name="next" class="btn btn-outline-info col-5 col-md-5" value="Siguiente">
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--Fin Botones -->
+            </div>
           </div>
         </div>
       </div>
-
-      <div class="row mt-3">
-        <div class="col-4">
-          <div class="card" style="width: 400px; height: 300px">
-            <div class="card-body">ñaaaaaa</div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="card" style="width: 400px; height: 300px">
-            <div class="card-body">ñaaaaaa</div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="card" style="width: 400px; height: 300px">
-            <div class="card-body">ñaaaaaa</div>
-          </div>
-        </div>
-      </div>
+      <div class="col-4"></div>
     </div>
+  </div>
+  <script>
 
-    <script>
-         let element1 = document.getElementsByClassName("card"); // forma de encontrar elemento 
-         
 
-        element1[0].addEventListener("mouseover", () => {element1[0].style.background = 'green'}); 
-        element1[1].addEventListener("mouseover", () => {element1[1].style.background = 'green'}); 
-        element1[2].addEventListener("mouseover", () => {element1[2].style.background = 'green'}); 
-        element1[3].addEventListener("mouseover", () => {element1[3].style.background = 'green'}); 
-        element1[4].addEventListener("mouseover", () => {element1[4].style.background = 'green'}); 
-        element1[5].addEventListener("mouseover", () => {element1[5].style.background = 'green'}); 
+    var botonAntes = document.getElementsByName('previous'); //antes 
+    var botondespues = document.getElementsByName('next'); //antes 
+    var divimg = document.getElementById("imagen")
+    var imagenes = 0
 
-        element1[0].addEventListener("mouseout", () => {element1[0].style.background = 'white'}); 
-        element1[1].addEventListener("mouseout", () => {element1[1].style.background = 'white'}); 
-        element1[2].addEventListener("mouseout", () => {element1[2].style.background = 'white'}); 
-        element1[3].addEventListener("mouseout", () => {element1[3].style.background = 'white'}); 
-        element1[4].addEventListener("mouseout", () => {element1[4].style.background = 'white'}); 
-        element1[5].addEventListener("mouseout", () => {element1[5].style.background = 'white'}); 
+    botonAntes[0].onclick = function () {
 
-    </script>
-  </body>
+      imagenes += 1;
 
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-    crossorigin="anonymous"
-  ></script>
+      if (imagenes > 5) {
+        imagenes = 1;
+      }
+
+      divimg.innerHTML = `"<img class="card-img-top" src="../photos/minion${imagenes}.jpg" alt="Card image cap" height="400px">"`
+
+    }
+
+
+    botondespues[0].onclick = function () {
+
+      imagenes -= 1;
+
+      if (imagenes < 1) {
+        imagenes = 5;
+      }
+
+      divimg.innerHTML = `"<img class="card-img-top" src="../photos/minion${imagenes}.jpg" alt="Card image cap" height="400px">"`
+
+    }
+  </script>
+</body>
+
 </html>
