--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
 						class="card text-white bg-dark mb-3"
 						style="width: 400px"
 					>
-						<div class="card-header">....</div>
+						<div class="card-header">Eventos JavaScript</div>
 						<div class="card-body">
-							<h5 class="card-title">....</h5>
-							<p class="card-text">.....</p>
-							<a href="Ecam.html" class="btn btn-primary"
+							<h5 class="card-title">Acciones</h5>
+							<p class="card-text">Botones con diferentes eventos accinados,además de mostrar las veces que se ejecutan</p>
+							<a href="Practicas/boostrap.html" class="btn btn-primary"
 								>Probarlo</a
 							>
 						</div>
