--- a/Integradora/index.html
+++ b/Integradora/index.html
@@ -55,13 +55,13 @@
     <main>
       <div class="container">
         <div class="card my-3 shadow">
-          <div class="card border-2 m-3">
+          <div class="card border-2 m-md-3">
             <div class="card-body">
               <div class="row">
                 <!-- Parte izquierda -->
                 <div class="col-lg-6 col-sm-12">
                   <!-- comienzo con contenido -->
-                  <div class="row m-3">
+                  <div class="row m-md-3 mb-3">
                     <div class="col-auto">
                       <label for="nameProduct" class="fw-bold form-label"
                         >Ingresa el nombre del producto
@@ -75,10 +75,10 @@
                       />
                     </div>
                   </div>
-                  <div class="row m-3">
-                    <div class="col-12 form-floating">
+                  <div class="row m-md-3 ">
+                    <div class="col-12  form-floating">
                       <textarea
-                        class="form-control"
+                        class="form-control "
                         placeholder="Leave a comment here"
                         id="floatingTextarea"
                       ></textarea>
@@ -88,7 +88,7 @@
                     </div>
                   </div>
 
-                  <div class="row card m-4">
+                  <div class="row card m-md-4 my-2">
                     <h5 class="text-center mt-3">Imagenes por defecto</h5>
 
                     <div class="col-12">
@@ -106,11 +106,27 @@
                         <label class="input-group-text p-1 fw-light"
                           >Secundarias</label
                         >
-                        <input type="file" class="form-control" multiple>
+                        <input type="file" class="form-control" >
                       </div>
                     </div>
 
-                   
+                    <div class="col-12">
+                      <div class="input-group mb-3">
+                        <label class="input-group-text p-1 fw-light"
+                          >Secundarias</label
+                        >
+                        <input type="file" class="form-control" />
+                      </div>
+                    </div>
+
+                    <div class="col-12">
+                      <div class="input-group mb-3">
+                        <label class="input-group-text p-1 fw-light"
+                          >Secundarias</label
+                        >
+                        <input type="file" class="form-control" />
+                      </div>
+                    </div>
                   </div>
 
                   <div class="row d-flex justify-content-around">
