Vista Productos oferta

--- a/Integradora/index.html
+++ b/Integradora/index.html
@@ -13,11 +13,11 @@
     />
   </head>
 
-  <body>
+  <body style="background-color: rgba(230, 230, 230, .9)">
     <header>
       <!-- encabezado  -->
       <nav class="navbar  navbar-expand-lg sticky-top navbar-dark bg-success">
-        <div class="container-fluid">
+        <div class="container">
 
           <a class="navbar-brand" href="#">
             <img src="https://sisava2.utez.edu.mx:8443/SISAVA/img/utez/logo2016-contorno.png" alt="Logo" width="90" height="40" >
@@ -182,11 +182,13 @@
                     </div>
                   </div>
 
-                  <div class="row">
+                  <div class="row ">
                     <div class="col-12">
-                      <p class="fw-bold pt-1">Tallas:</p>
                       <div class="row">
                         <div class="col-lg-3 col-sm-12">
+                          <hr>
+                      <p class="fw-bold ">Talla:</p>
+
                           <p
                             class="border border-warning py-1 px-4 text-center mb-1"
                           >
@@ -220,8 +222,11 @@
                             placeholder="$$$$"
                           />
                         </div>
-
+                        
                         <div class="col-lg-3 col-sm-12">
+                          <hr>
+
+                      <p class="fw-bold pt-1">Talla:</p>
                           <p
                             class="border border-warning py-1 px-4 text-center mb-1"
                           >
@@ -257,6 +262,9 @@
                         </div>
 
                         <div class="col-lg-3 col-sm-12">
+                          <hr>  
+                      <p class="fw-bold pt-1">Talla:</p>
+
                           <p
                             class="border border-warning py-1 px-4 text-center mb-1"
                           >
@@ -292,6 +300,9 @@
                         </div>
 
                         <div class="col-lg-3 col-sm-12">
+                          <hr>
+                      <p class="fw-bold pt-1">Talla:</p>
+
                           <p
                             class="border border-warning py-1 px-4 text-center mb-1"
                           >
@@ -317,6 +328,8 @@
                               -
                             </button>
                           </div>
+
+                          
 
                           <p class="fw-bold my-2">Precio:</p>
                           <input
