--- a/Integradora/login.html
+++ b/Integradora/login.html
@@ -17,7 +17,7 @@
     <header>
       <!-- encabezado  -->
       <nav class="navbar  navbar-expand navbar-dark bg-success">
-        <div class="container-fluid d-flex justify-content-center">
+        <div class="container d-flex justify-content-center">
           <div class="navbar-nav ">
           <h2 class="text-uppercase fw-bold" style="color: #fffb">Bienvenido</h2>
           </div>
