--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					>
 				</div>
 			</div>
-			<nav class="navbar navbar-dark bg-dark">
+			<nav class="navbar navbar-light shadow" style="background-color: #e3f2fd;">
 				<button
 					class="navbar-toggler"
 					type="button"
@@ -35,6 +35,65 @@
 				</button>
 			</nav>
 		</div>
+
+<div class="container">
+			<div class=" text-center mt-4">
+				<h2 class="fw-bold">Integradora</h2>
+			</div>
+
+			<div class="row mt-4">
+				<div class="col-auto ">
+					<div class="card text-dark fw-bold my-2 my-lg-0" style="background-color: #d1e7dd;">
+						<div class="card-header text-center">Agregar producto</div>
+						<div class="card-body text-center	">
+							<a href="Integradora/index.html" class="btn btn-primary"
+								>Probarlo</a
+							>
+							<hr>
+							<p class="card-text text-center">
+							<small  ">14/07/2022</small>
+
+							</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-auto">
+					<div class="card text-dark fw-bold my-2 my-lg-0" style="background-color: #d1e7dd;">
+						<div class="card-header text-center">Login</div>
+						<div class="card-body text-center">
+							<a href="Integradora/login.html" class="btn btn-primary"
+								>Probarlo</a
+							>
+							<hr>
+							<p class="card-text text-center">
+							<small  ">14/07/2022</small>
+
+							</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-auto">
+					<div class="card text-dark fw-bold my-2 my-lg-0" style="background-color: #d1e7dd;">
+						<div class="card-header text-center">Vista oferta</div>
+						<div class="card-body text-center">
+							<a href="Integradora/productosUser.html" class="btn btn-primary"
+								>Probarlo</a
+							>
+							<hr>
+							<p class="card-text text-center">
+							<small >14/07/2022</small>
+
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+		<hr class="mb-5">
 		<!-- .................................................................................................. -->
 		<div class="container mt-4">
 			<div class="row">
@@ -145,47 +204,7 @@
 
 
 			</div>
-			<hr>
 			
-			<div class="text-center">
-				<h2 class="fw-bold">Integradora</h2>
-			</div>
-
-			<div class="row mt-4">
-				<div class="col-auto">
-					<div class="card text-white bg-dark">
-						<div class="card-header text-center">Agregar producto</div>
-						<div class="card-body">
-							<a href="Integradora/index.html" class="btn btn-primary"
-								>Probarlo</a
-							>
-							<hr>
-							<p class="card-text text-center">
-							<small class="text-white ">14/07/2022</small>
-
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-auto">
-					<div class="card text-white bg-dark">
-						<div class="card-header text-center">Login</div>
-						<div class="card-body">
-							<a href="Integradora/login.html" class="btn btn-primary"
-								>Probarlo</a
-							>
-							<hr>
-							<p class="card-text text-center">
-							<small class="text-white ">14/07/2022</small>
-
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
 		<!-- .................................................................................................. -->
 
 		<script
