--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							>
 							<hr>
 							<p class="card-text text-center">
-							<small  ">14/07/2022</small>
+							<small>14/07/2022</small>
 
 							</p>
 						</div>
@@ -79,6 +79,22 @@
 						<div class="card-header text-center">Vista oferta</div>
 						<div class="card-body text-center">
 							<a href="Integradora/productosUser.html" class="btn btn-primary"
+								>Probarlo</a
+							>
+							<hr>
+							<p class="card-text text-center">
+							<small >14/07/2022</small>
+
+							</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-auto">
+					<div class="card text-dark fw-bold my-2 my-lg-0" style="background-color: #d1e7dd;">
+						<div class="card-header text-center">Carrusel</div>
+						<div class="card-body text-center">
+							<a href="Integradora/carrusel.html" class="btn btn-primary"
 								>Probarlo</a
 							>
 							<hr>
