--- a/Integradora/carrusel.html
+++ b/Integradora/carrusel.html
@@ -88,7 +88,7 @@
   ======================================-->  
   
   <div class="container mb-1 ">
-  <div class="d-flex justify-content-sm-center mx-5 m-sm-0 mt-3 d-block d-dm-block d-lg-none">
+  <div class="d-flex justify-content-center mt-3 d-block d-dm-block d-lg-none">
   <button class=" btn p-3 px-5 btn-primary text-white m-sm-3 px-4" type="button" data-bs-toggle="collapse" data-bs-target="#categoriasProducts"  >
     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tags" viewBox="0 0 16 16">
       <path d="M3 2v4.586l7 7L14.586 9l-7-7H3zM2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2z"/>
@@ -105,7 +105,7 @@
   <!-- inicio categoria cuadros  -->
   <div class="container ">
     <div class="d-lg-block collapse " id="categoriasProducts">      
-      <div class="d-flex flex-wrap justify-content-md-between justify-content-center ">
+      <div class="d-flex flex-wrap justify-content-md-around justify-content-center ">
         <a href="#" class="btn my-1 mx-1 mx-md-0 p-3 px-5 btn-primary text-decoration-none text-white m-sm-3">Categoria</a>            
         <a href="#" class="btn my-1 mx-1 mx-md-0 p-3 px-5 btn-primary text-decoration-none text-white m-sm-3">Categoria</a>            
         <a href="#" class="btn my-1 mx-1 mx-md-0 p-3 px-5 btn-primary text-decoration-none text-white m-sm-3">Categoria</a>            
@@ -121,8 +121,9 @@
 
     <main>
       <div class="container mt-3">
-        <div class="row mb-4">
-          <div class="col-12 col-lg-3 col-md-5  my-1 px-sm-3 mx-sm-3 p-lg-0 m-lg-0 ">
+        <div class="ml-5">
+        <div class="row  d-flex justify-content-between ">
+          <div class="col-12 col-lg-3 col-md-5 d-flex justify-content-center my-2     ">
             <a href="#" class="card position-relative text-decoration-none " style="max-width: 277.84px;">
                 <!-- Iteam de oferta -->
                 <span class="position-absolute  badge rounded-1  m-2 px-3 bg-success">Oferta</span>
@@ -141,7 +142,7 @@
               </div>
             </a>
           </div>
-          <div class="col-12 col-lg-3 col-md-5  my-1 px-sm-3 mx-sm-3 p-lg-0 m-lg-0 ">
+          <div class="col-12 col-lg-3 col-md-5 d-flex justify-content-center my-2     ">
             <div class="card position-relative " style="max-width: 277.84px;">
                 <!-- Iteam de oferta -->
                 <span class="position-absolute  badge rounded-1  m-2 px-3 bg-success">Oferta</span>
@@ -160,7 +161,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-3 col-md-5  my-1 px-sm-3 mx-sm-3 p-lg-0 m-lg-0 ">
+          <div class="col-12 col-lg-3 col-md-5 d-flex justify-content-center my-2     ">
             <div class="card position-relative " style="max-width: 277.84px;">
                 <!-- Iteam de oferta -->
                 <span class="position-absolute  badge rounded-1  m-2 px-3 bg-success">Oferta</span>
@@ -179,7 +180,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-3 col-md-5  my-1 px-sm-3 mx-sm-3 p-lg-0 m-lg-0 ">
+          <div class="col-12 col-lg-3 col-md-5 d-flex justify-content-center my-2     ">
             <div class="card position-relative " style="max-width: 277.84px;">
                 <!-- Iteam de oferta -->
                 <span class="position-absolute  badge rounded-1  m-2 px-3 bg-success">Oferta</span>
@@ -200,8 +201,8 @@
           </div>
      
         </div>
-        <div class="row mb-4">
-          <div class="col-12 col-lg-3 col-md-5  my-1 px-sm-3 mx-sm-3 p-lg-0 m-lg-0 ">
+        <div class="row  d-flex justify-content-between">
+          <div class="col-12 col-lg-3 col-md-5 d-flex justify-content-center my-2     ">
             <div class="card position-relative " style="max-width: 277.84px;">
                 <!-- Iteam de oferta -->
 
@@ -220,7 +221,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-3 col-md-5  my-1 px-sm-3 mx-sm-3 p-lg-0 m-lg-0 ">
+          <div class="col-12 col-lg-3 col-md-5 d-flex justify-content-center my-2     ">
             <div class="card position-relative " style="max-width: 277.84px;">
                 <!-- Iteam de oferta -->
 
@@ -239,7 +240,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-3 col-md-5  my-1 px-sm-3 mx-sm-3 p-lg-0 m-lg-0 ">
+          <div class="col-12 col-lg-3 col-md-5 d-flex justify-content-center my-2     ">
             <div class="card position-relative " style="max-width: 277.84px;">
                 <!-- Iteam de oferta -->
 
@@ -258,7 +259,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-3 col-md-5  my-1 px-sm-3 mx-sm-3 p-lg-0 m-lg-0 ">
+          <div class="col-12 col-lg-3 col-md-5 d-flex justify-content-center my-2     ">
             <div class="card position-relative " style="max-width: 277.84px;">
                 <!-- Iteam de oferta -->
 
@@ -278,6 +279,7 @@
             </div>
           </div>
      
+        </div>
         </div>
       </div>
 
