--- a/Integradora/productosUser.html
+++ b/Integradora/productosUser.html
@@ -61,8 +61,8 @@
 
     <main>
       <div class="container mt-3">
-        <div class="row mb-4">
-          <div class="col-12 col-lg-3 col-md-5  my-1 px-sm-3 mx-sm-3 p-lg-0 m-lg-0 ">
+        <div class="row d-flex justify-content-between">
+          <div class="col-12 col-lg-3 col-md-5 d-flex justify-content-center my-2 ">
             <a href="#" class="card position-relative text-decoration-none " style="max-width: 277.84px;">
                 <!-- Iteam de oferta -->
                 <span class="position-absolute  badge rounded-1  m-2 px-3 bg-success">Oferta</span>
@@ -81,7 +81,7 @@
               </div>
             </a>
           </div>
-          <div class="col-12 col-lg-3 col-md-5  my-1 px-sm-3 mx-sm-3 p-lg-0 m-lg-0 ">
+          <div class="col-12 col-lg-3 col-md-5 d-flex justify-content-center my-2 ">
             <div class="card position-relative " style="max-width: 277.84px;">
                 <!-- Iteam de oferta -->
                 <span class="position-absolute  badge rounded-1  m-2 px-3 bg-success">Oferta</span>
@@ -100,7 +100,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-3 col-md-5  my-1 px-sm-3 mx-sm-3 p-lg-0 m-lg-0 ">
+          <div class="col-12 col-lg-3 col-md-5 d-flex justify-content-center my-2 ">
             <div class="card position-relative " style="max-width: 277.84px;">
                 <!-- Iteam de oferta -->
                 <span class="position-absolute  badge rounded-1  m-2 px-3 bg-success">Oferta</span>
@@ -119,7 +119,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-3 col-md-5  my-1 px-sm-3 mx-sm-3 p-lg-0 m-lg-0 ">
+          <div class="col-12 col-lg-3 col-md-5 d-flex justify-content-center my-2 ">
             <div class="card position-relative " style="max-width: 277.84px;">
                 <!-- Iteam de oferta -->
                 <span class="position-absolute  badge rounded-1  m-2 px-3 bg-success">Oferta</span>
@@ -140,8 +140,8 @@
           </div>
      
         </div>
-        <div class="row mb-4">
-          <div class="col-12 col-lg-3 col-md-5  my-1 px-sm-3 mx-sm-3 p-lg-0 m-lg-0 ">
+        <div class="row d-flex justify-content-between">
+          <div class="col-12 col-lg-3 col-md-5 d-flex justify-content-center my-2 ">
             <div class="card position-relative " style="max-width: 277.84px;">
                 <!-- Iteam de oferta -->
 
@@ -160,7 +160,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-3 col-md-5  my-1 px-sm-3 mx-sm-3 p-lg-0 m-lg-0 ">
+          <div class="col-12 col-lg-3 col-md-5 d-flex justify-content-center my-2 ">
             <div class="card position-relative " style="max-width: 277.84px;">
                 <!-- Iteam de oferta -->
 
@@ -179,7 +179,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-3 col-md-5  my-1 px-sm-3 mx-sm-3 p-lg-0 m-lg-0 ">
+          <div class="col-12 col-lg-3 col-md-5 d-flex justify-content-center my-2 ">
             <div class="card position-relative " style="max-width: 277.84px;">
                 <!-- Iteam de oferta -->
 
@@ -198,7 +198,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-3 col-md-5  my-1 px-sm-3 mx-sm-3 p-lg-0 m-lg-0 ">
+          <div class="col-12 col-lg-3 col-md-5 d-flex justify-content-center my-2 ">
             <div class="card position-relative " style="max-width: 277.84px;">
                 <!-- Iteam de oferta -->
 
